# DjangoREST

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  streamflix_local.sql
.pnpm-store/v10/projects/6e3b338b7fb65e9afd20715b73a01038/: README.md  package.json  pnpm-lock.yaml
.pnpm-store/v10/projects/6e3b338b7fb65e9afd20715b73a01038/app/: layout.tsx  page.tsx
.pytest_cache/v/cache/: nodeids
apps/content/: auth_serializers.py  auth_views.py  filters.py  models.py  serializers.py  test_auth_registration.py  test_jwt_auth.py  tests.py  urls.py  views.py
apps/subscriptions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/subscriptions/migrations/: 0001_initial.py  0002_seed_subscription_plans.py  0003_profile_preferences.py  0004_subscription_billing_metadata.py
core/: urls.py
core/settings/: __init__.py  base.py  prod.py
frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/title/[id]/: page.tsx
frontend/components/stream/: auth-screen.tsx  hero-banner.tsx  my-list-modal.tsx  navbar.tsx  profile-editor.tsx  profile-selector.tsx  search-modal.tsx  skeletons.tsx  subscription-screen.tsx  top10-row.tsx  video-card.tsx  video-modal.tsx  video-player.tsx  video-row.tsx
frontend/components/ui/: use-mobile.tsx
frontend/lib/: auth-api.ts  auth-context.tsx  auth-tokens.ts  catalog-api.ts  profile-context.tsx  subscriptions-api.ts  video-context.tsx  video-data.ts
(+10 files in other folders)
