[project]
name = "djangorest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-filter>=25.2",
    "drf-spectacular>=0.28.0",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra"
